<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manualSet">

    <TextView
        android:id="@+id/textView"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="62dp"
        android:text="@string/manual_mode"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/manualKnob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manualKnob"
        android:layout_width="250dp"
        android:layout_height="175dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="50dp"
        android:text="@string/set_knobs"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/manualTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manualTemp"
        android:layout_width="250dp"
        android:layout_height="175dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="159dp"
        android:text="@string/set_temperature"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualKnob" />
</androidx.constraintlayout.widget.ConstraintLayout>